--- a/style.css
+++ b/style.css
@@ -25,3 +25,22 @@ canvas {
   transform: translate(-50%, -50%); /* Adjust by half its own width/height to center it */
   height: 20px;        /* Adjust height as needed */
 }
+.map{
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 300px;
+  height: 200px;
+  border: 3px solid #73AD21;
+}
+#point{
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  color: rgb(255, 0, 0);
+}
+.map img {
+  position: absolute;
+  width: 300px;   /* 设置宽度为300像素 */
+  height: 200px;   /* 高度自动等比例调整 */
+}
